--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web maker</a></section><section class="header1 cid-u2WMo93hsw" id="header16-1">
+<section class="engine"><a href="https://mobirise.info/e">how to make a site for free</a></section><section class="header1 cid-u2WMo93hsw" id="header16-1">
 
     
 
@@ -78,7 +78,7 @@
                     Fill In&nbsp;</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Fill In</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-black-outline display-4" href="https://mobirise.co">To About</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-black-outline display-4" href="about.html">To About</a></div>
             </div>
         </div>
     </div>
