--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header1 cid-u2WMo93hsw" id="header16-1">
+<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="header1 cid-u2WMo93hsw" id="header16-1">
 
     
 
@@ -116,7 +116,7 @@
             <div class="media-container-row mbr-white">
                 <div class="col-md-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright 2024 Aerial Communications - All Rights Reserved
+                        © Copyright 2024 Aerial Communications a Kevin A Diehl company - All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
