--- a/support.html
+++ b/support.html
@@ -115,7 +115,7 @@
             <div class="media-container-row mbr-white">
                 <div class="col-md-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright 2024 Aerial Communications - All Rights Reserved
+                        © Copyright 2024 Aerial Communications a Kevin A Diehl company - All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
