--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content4 cid-u3qkgq5fbG" id="content4-m">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="mbr-section content4 cid-u3qkgq5fbG" id="content4-m">
 
     
 
@@ -186,7 +186,7 @@
             <div class="media-container-row mbr-white">
                 <div class="col-md-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright 2024 Aerial Communications - All Rights Reserved
+                        © Copyright 2024 Aerial Communications a Kevin A Diehl company - All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
